edits to description

--- a/html/rarelead.html
+++ b/html/rarelead.html
@@ -259,7 +259,7 @@
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>The passive job seeker is a skilled employee who is starting to feel that the next job is on the horizon. They are busy and do not have the time to comb job sites and wade through cryptic job descriptions. They only want to see the jobs that they'd leave their current job for. And most of all, they do not want to be approached by recruiters &ndash; unless  it is a true match.</p>
+      <p>The passive job seeker is a skilled employee who is starting to feel that the next job is on the horizon. They are busy with their current job and do not have time to do a search, but would be open to new opportunities. They only want to see jobs that they are qualified for and ones that they'd leave their current job for. They are frequently contacted by recruiters - many times at inopportune times and for jobs they are not interested in. </p>
     </div>
   </div>
 </div>
