adding content area to page

--- a/html/rarelead.html
+++ b/html/rarelead.html
@@ -295,6 +295,22 @@
   </div>
 </div>
 
+<div class="body-container container">
+  <div class="row">
+    <div class="body-left col-sm-4">
+      <div class="body-title">
+        <h3>What was</h3>
+        <h4>the solution?</h4>
+      </div>
+    </div>
+    <div class="body-right col-sm-7 col-sm-offset-1">
+      <p>To soften the outreach process for both the job seeker and the recruiter, simplicity and privacy had to be designed into the product. The app would allow a candidate to share their linked in profile page to be automatically qualified. They would browse through jobs with direct, easy to read details and show interest by clicking the checkmark button. They would be contacted only through text and only if they first showed interest.</p>
+
+      <p>The recruiter would have a streamlined process of adding jobs to the system through an easy to use site that guides them into writing succinct details. They would no longer need to contact potential candidates out of the blue as the system would show only people with real interest.</p>
+    </div>
+  </div>
+</div>
+
 <div class="details container">
   <div class="row">
     <div class="col-sm-12">
@@ -323,6 +339,8 @@
     </div>
   </div>
 </div>
+
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 <script src="http://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
