adding new pages and images

--- a/html/currencycheatsheet.html
+++ b/html/currencycheatsheet.html
@@ -21,7 +21,7 @@
   </div>
 </div>
 <div class="photo-container clearfix">
-  <div class="subphoto subphoto-rarelead"></div>
+  <div class="subphoto subphoto-currencycheatsheet"></div>
   <div class="whitecard view-slides clickable">
     <h4>an app to quietly help</h4>
     <h5>passive job seekers</h5>
