--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
     </div>
 
     <div class="homethumbs clearfix">
-      <a class="thumb" href="#">
+      <a class="thumb" href="html/coinledger.html">
         <span class="thumbwords">bitcoin investors</span>
         <span class="thumbimage" style="background-image: url(images/home_bitcoin.png);"></span>
       </a>
-      <a class="thumb" href="#">
+      <a class="thumb" href="html/creativelive.html">
         <span class="thumbwords">creative learners</span>
         <span class="thumbimage" style="background-image: url(images/home_creativelive.png);"></span>
       </a>
-      <a class="thumb" href="#">
+      <a class="thumb" href="html/quantcast.html">
         <span class="thumbwords">web publishers</span>
         <span class="thumbimage" style="background-image: url(images/home_quantcast.png);"></span>
       </a>
@@ -40,11 +40,11 @@
         <span class="thumbwords">passive job seekers</span>
         <span class="thumbimage" style="background-image: url(images/home_rarelead.png);"></span>
       </a>
-      <a class="thumb" href="#">
+      <a class="thumb" href="html/bnbledger.html">
         <span class="thumbwords">airbnb power hosts</span>
         <span class="thumbimage" style="background-image: url(images/home_bnbledger.png);"></span>
       </a>
-      <a class="thumb" href="#">
+      <a class="thumb" href="html/currencycheatsheet.html">
         <span class="thumbwords">the money curious</span>
         <span class="thumbimage" style="background-image: url(images/home_currencycheatsheet.png);"></span>
       </a>
