image updates, creative live page edits

--- a/html/creativelive.html
+++ b/html/creativelive.html
@@ -23,8 +23,8 @@
 <div class="photo-container clearfix">
   <div class="subphoto subphoto-creativelive"></div>
   <div class="whitecard view-slides clickable">
-    <h4>an app to quietly help</h4>
-    <h5>passive job seekers</h5>
+    <h4>designs to inspire</h4>
+    <h5>creative learners</h5>
     <h6>view slides</h6>
   </div>
   <div class="eg-modal">
@@ -37,10 +37,9 @@
             <img class="responsive center" src="http://eringallup.info/name/logo.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>the project</h4>
+            <h4>project 1: site redesign</h4>
             <hr>
-            <p>This project was a sketch to test out the concept of a &lsquo;Tinder for jobs&rsquo;. The first task was to decide on a name and pull together a logo, which would give us a starting point for the design.</p>
-            <p>The name and logo are designed to evoke trust and hint at exclusivity.</p>
+            <p>This was Creative Live's site when I arrived at the company. They had just redesigned their logo with an outside agency and were looking to update the site to make their users feel more at home.</p>
           </div>
         </div>
 
@@ -255,11 +254,13 @@
     <div class="body-left col-sm-4">
       <div class="body-title">
         <h3>Who are</h3>
-        <h4>passive job seekers?</h4>
+        <h4>creative learners?</h4>
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>The passive job seeker is a skilled employee who is starting to feel that the next job is on the horizon. They are busy with their current job and do not have time to do a search, but would be open to new opportunities. They only want to see jobs that they are qualified for and ones that they'd leave their current job for. They are frequently contacted by recruiters - many times at inopportune times and for jobs they are not interested in. </p>
+      <p>Creative learners are the arty people among us. They are free spirits managing their 9-5 jobs but are dreaming of a life where they do what they love and get paid for it. They are ready to make the leap but aren't sure exactly how to make that happen. </p>
+      <p>They are people who love to learn new things. They are working photographers, musicians, crafters and graphic designers looking to hone thier crafts and grow their business skills.</p>
+      <p>Creative learners are visual, optimistic people who get bogged down by too many choices and lots of reading. They learn best by being told and shown. They like to learn alongside others and feel a part of a community.</p>
     </div>
   </div>
 </div>
@@ -267,30 +268,30 @@
 <div class="project container">
   <div class="row">
     <div class="col-sm-12">
-      <h4 class="project-title">The Project</h4>
-      <p class="lead">Create a system that reduces prospecting friction for passive job seekers.</p>
+      <h4 class="project-title">Projects</h4>
+      <p class="lead">Make designs that are intuitive and inspiring for creative learners.</p>
     </div>
   </div>
   <div class="row project-items match-height distribute">
     <div class="project-item col-sm-3">
       <div class="project-item-top" style="padding-top: 30px;"><img class="responsive" src="../images/rarelead-logo.png"></div>
-      <h5>Logo</h5>
-      <p>Starts visual design and branding</p>
+      <h5>Redesign</h5>
+      <p>Simple navigation and new brand make creative people feel at home.</p>
     </div>
     <div class="project-item col-sm-3">
       <div class="project-item-top"><img class="responsive outline" src="http://eringallup.info/name/screens/4.png"></div>
-      <h5>App</h5>
-      <p>Allows seekers to qualify themselves and show interest</p>
+      <h5>Calendar</h5>
+      <p>Allows users to find upcoming classes of interest</p>
     </div>
     <div class="project-item col-sm-3">
       <div class="project-item-top"><img class="responsive outline" src="http://eringallup.info/name/7-1.png"></div>
-      <h5>Site</h5>
-      <p>Allows recruiters to post jobs and contact prospects</p>
+      <h5>App</h5>
+      <p>Simplifies watching classes on the go</p>
     </div>
     <div class="project-item col-sm-3">
       <div class="project-item-top"><img class="responsive outline" src="http://eringallup.info/name/16-1.png"></div>
-      <h5>Lander</h5>
-      <p>Tests user interest while site is created</p>
+      <h5>Viewer</h5>
+      <p>Classroom gives users a place to focus and interact</p>
     </div>
   </div>
 </div>
@@ -299,14 +300,12 @@
   <div class="row">
     <div class="body-left col-sm-4">
       <div class="body-title">
-        <h3>What was</h3>
-        <h4>the solution?</h4>
+        <h3>What were some</h3>
+        <h4>reactions?</h4>
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>To soften the outreach process for both the job seeker and the recruiter, simplicity and privacy had to be designed into the product. The app would allow a candidate to share their linked in profile page to be automatically qualified. They would browse through jobs with direct, easy to read details and show interest by clicking the checkmark button. They would be contacted only through text and only if they first showed interest.</p>
-
-      <p>The recruiter would have a streamlined process of adding jobs to the system through an easy to use website that guides them into creating an appealing posting with succinct details. They would no longer need to contact potential candidates out of the blue as the system would show only people with real interest.</p>
+      <p>Insert twitter comments.</p>
     </div>
   </div>
 </div>
