--- a/html/rarelead.html
+++ b/html/rarelead.html
@@ -299,8 +299,8 @@
   <div class="row">
     <div class="body-left col-sm-4">
       <div class="body-title">
-        <h3>What was</h3>
-        <h4>the solution?</h4>
+        <h3>What was the</h3>
+        <h4>solution?</h4>
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
