--- a/html/creativelive.html
+++ b/html/creativelive.html
@@ -260,7 +260,7 @@
     <div class="body-right col-sm-7 col-sm-offset-1">
       <p>Creative learners are the arty people among us. They are free spirits managing their 9-5 jobs but are dreaming of a life where they do what they love and get paid for it. They are ready to make the leap but aren't sure exactly how to make that happen. </p>
       <p>They are people who love to learn new things. They are working photographers, musicians, crafters and graphic designers looking to hone thier crafts and grow their business skills.</p>
-      <p>Creative learners are visual, optimistic people who get bogged down by too many choices and lots of reading. They learn best by being told and shown. They like to learn alongside others and feel a part of a community.</p>
+      <p>Creative learners are visual, optimistic people who get bogged down by too many choices and lots of reading. They learn best by being told and shown. They like to learn alongside others and feel part of a community.</p>
     </div>
   </div>
 </div>
