--- a/html/creativelive.html
+++ b/html/creativelive.html
@@ -274,22 +274,22 @@
   </div>
   <div class="row project-items match-height distribute">
     <div class="project-item col-sm-3">
-      <div class="project-item-top" style="padding-top: 30px;"><img class="responsive" src="../images/rarelead-logo.png"></div>
+      <div class="project-item-top"><img class="responsive outline" src="http://eringallup.info/creativelive/1/2.png"></div>
       <h5>Redesign</h5>
-      <p>Simple navigation and new brand make creative people feel at home.</p>
+      <p>Simple navigation and new brand made creative people feel at home.</p>
     </div>
     <div class="project-item col-sm-3">
-      <div class="project-item-top"><img class="responsive outline" src="http://eringallup.info/name/screens/4.png"></div>
+      <div class="project-item-top"><img class="responsive outline" src="http://eringallup.info/creativelive/1/15.png"></div>
       <h5>Calendar</h5>
       <p>Allows users to find upcoming classes of interest</p>
     </div>
     <div class="project-item col-sm-3">
-      <div class="project-item-top"><img class="responsive outline" src="http://eringallup.info/name/7-1.png"></div>
+      <div class="project-item-top"><img class="responsive outline" src="http://eringallup.info/creativelive/1/19.png"></div>
       <h5>App</h5>
       <p>Simplifies watching classes on the go</p>
     </div>
     <div class="project-item col-sm-3">
-      <div class="project-item-top"><img class="responsive outline" src="http://eringallup.info/name/16-1.png"></div>
+      <div class="project-item-top"><img class="responsive outline" src="http://eringallup.info/creativelive/1/24.png"></div>
       <h5>Viewer</h5>
       <p>Classroom gives users a place to focus and interact</p>
     </div>
