filling out CL's slideshow

--- a/html/creativelive.html
+++ b/html/creativelive.html
@@ -34,167 +34,212 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive center" src="http://eringallup.info/name/logo.png">
+            <img class="responsive" src="http://eringallup.info/creativelive/1/1.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>project 1: site redesign</h4>
+            <h4>website before</h4>
             <hr>
-            <p>This was Creative Live's site when I arrived at the company. They had just redesigned their logo with an outside agency and were looking to update the site to make their users feel more at home.</p>
+            <p>This was Creative Live's site when I arrived at the company. Users gave feedback that they had a hard time knowing what the company did and how the service worked.</p>
+            <p>They weren't aware that there were classes happening at that moment that they could watch for free, and a catalog of classes they could buy.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/screens/1.png">
+            <img class="responsive" src="http://eringallup.info/creativelive/1/2-4.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>the app : home</h4>
+            <h4>redesign v.1</h4>
             <hr>
-            <p>The app is designed for the job seeker needing a low friction, discrete way of showing interest in new opportunities.
-            Upon sign up the user enters the url of their Linkedin profile, which allows the app to scan keywords from their profile to pre-qualify them for posted jobs. </p>
+            <p>The first design submitted aimed to radically simplify the navigation and show the class videos playing live right away at the top of the page. </p>
+            <!--<p>It also discribed the company's business model of &lsquo;watch now free, buy on demand&rsquo;.</p>-->
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/screens/3.png">
+            <img class="responsive" src="http://eringallup.info/creativelive/1/2-5.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>preferences</h4>
+            <h4>v.1 channel change</h4>
             <hr>
-            <p>The seeker sets their preferences to filter their mandatory requirements like team size, commute time, company type and perks.</p>
+            <p>Users could scan what was on now like tv, allowing them to know what the product was through experiencing it. I assigned colors to the different channel types to help users remember the subject they were most interested in.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/screens/4.png">
+            <img class="responsive" src="http://eringallup.info/creativelive/1/2-2.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>posted job</h4>
+            <h4>redesign v.2</h4>
             <hr>
-            <p>The user can then browse positions that are a match for them. A short, tidy overview area keeps descriptions succinct. </p>
+            <p>After feedback, the design was changed to have more navigation and an introductory video at the top of the page...</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/screens/5.png">
+            <img class="responsive" src="http://eringallup.info/creativelive/1/2-3.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>swiping up </h4>
+            <h4>v.2 post video</h4>
             <hr>
-            <p>Swiping up gives more details of the team and office location. </p>
-            <p>Instead of responsibilites, projects are listed to give the seeker an exact idea of what they would be doing.</p>
+            <p>... which finished to reveal a list of what free classes were on at that moment.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/screens/6.png">
+            <img class="responsive" src="http://eringallup.info/creativelive/1/2.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>company info &amp; perks</h4>
+            <h4>final design</h4>
             <hr>
-           <p>Financial information and leadership links allow the user to browse deeper if they'd like to know more about the company.</p>
-           <p>Perks include the must-haves already selected by the seeker in preferences.</p>
+            <p>The final design which tested best with users implemented the &lsquo;watch now&rsquo; list area at the top of every page and inserted static information below the navigation.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/1-1.png">
+            <img class="responsive" src="http://eringallup.info/creativelive/1/3.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>the site</h4>
+            <h4>&lsquo;watch now&rsquo; pull down</h4>
             <hr>
-            <p>Recruiters do much of the work at their desks. Therefore, the MVP would focus only on a desktop site where the recruiter would create their postings and manage communication with interested candidates.</p>
+            <p>The &lsquo;watch now&rsquo; area had a subtle video background of a bokeh pattern that subtly caught the user's eye and hinted at the inspirational quality of the classes.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/2-1.png">
+            <img class="responsive" src="http://eringallup.info/creativelive/1/4.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>the site : add job</h4>
+            <h4>channel colors</h4>
             <hr>
-            <p>The flow for adding a posting to the system.</p>
+            <p>Because there were 5 differenet channels, I selected a colors to help users keep them straight and read less.</p>
+            <p>The colors had a checklist of needs including avoiding error-message red and colors that would not be legible.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/3-1.png">
+            <img class="responsive" src="http://eringallup.info/creativelive/1/5.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>step 2, add projects</h4>
+            <h4>channel icons</h4>
             <hr>
-            <p>The flow for adding a posting to the system.</p>
+            <p>The original icons were created by an outside agency. I created this set in the same style to address clarity complaints of the original set. In the end the original icons were kept.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/4-1.png">
+            <img class="responsive" src="http://eringallup.info/creativelive/1/6.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>step 3, company info</h4>
+            <h4>special event pages</h4>
             <hr>
-            <p>The flow for adding a posting to the system.</p>
+           <p>Conference pages were designed to look different than class pages.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/5-1.png">
+            <img class="responsive" src="http://eringallup.info/creativelive/1/7.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>step 4, perks</h4>
+            <h4>class pages</h4>
             <hr>
-            <p>The flow for adding a posting to the system.</p>
+            <p>The design of class pages for sale nudged users to buy the class to &lsquo;unlock&rsquo; videos.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/6-1.png">
+            <img class="responsive" src="http://eringallup.info/creativelive/1/8.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>step 5, keywords</h4>
+            <h4>catalog page</h4>
             <hr>
-            <p>The flow for adding a posting to the system.</p>
+            <p>The catalog page used light gray backgrounds to group class &lsquo;cards&rsquo; for sale.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/7-1.png">
+            <img class="responsive" src="http://eringallup.info/creativelive/1/9.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>success</h4>
+            <h4>live classes page</h4>
             <hr>
-            <p>Successfully posted jobs populate the home page.</p>
+            <p>Classes shown with a dark background signified that they were being shown now for free.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/8-1.png">
+            <img class="responsive" src="http://eringallup.info/creativelive/1/10.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>manage postings</h4>
+            <h4>calendar, before</h4>
             <hr>
-            <p>The recruiter is notified when users have expressed interest in their job through clicking in the app.</p>
+            <p>The calendar page used before the redesign was drawn in from Google. It was overwhelming to read and did not coordinate.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/9-1.png">
+            <img class="responsive" src="http://eringallup.info/creativelive/1/11.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>new matches</h4>
+            <h4>calendar v.1</h4>
+            <hr>
+            <p>My initial design for the new calendar used a &lsquo;tv guide&rsquo; model. My hunch was that users wanted to see what was on now and later on in the week.</p>
+            <p>However after its release, the calendar had negative feedback from users. We had to research what users were using the calendar to do.</p>
+          </div>
+        </div>
+
+        <div>
+          <div class="slide-right col-sm-7 col-sm-push-5">
+            <img class="responsive" src="http://eringallup.info/creativelive/1/12.png">
+          </div>
+          <div class="slide-left col-sm-5 col-sm-pull-7">
+            <h4>calendar test, #1</h4>
+            <hr>
+            <p>This design was used to see if the users wanted a small calendar to help them put time into perspective...</p>
+          </div>
+        </div>
+
+        <div>
+          <div class="slide-right col-sm-7 col-sm-push-5">
+            <img class="responsive" src="http://eringallup.info/creativelive/1/13.png">
+          </div>
+          <div class="slide-left col-sm-5 col-sm-pull-7">
+            <h4>calendar test, #2</h4>
+            <hr>
+            <p>... or if they wanted a month-style view of the calendar.</p>
+          </div>
+        </div>
+
+        <div>
+          <div class="slide-right col-sm-7 col-sm-push-5">
+            <img class="responsive" src="http://eringallup.info/creativelive/1/14.png">
+          </div>
+          <div class="slide-left col-sm-5 col-sm-pull-7">
+            <h4>calendar test, #3</h4>
+            <hr>
+            <p>The third design option was most popular and showed us what users were using the calendar for: to show them a list of what was upcoming and allow them to easily get reminders for it.</p>
+          </div>
+        </div>
+
+        <div>
+          <div class="slide-right col-sm-7 col-sm-push-5">
+            <img class="responsive" src="http://eringallup.info/creativelive/1/15.png">
+          </div>
+          <div class="slide-left col-sm-5 col-sm-pull-7">
+            <h4>calendar, final design</h4>
             <hr>
             <p>New matches are highlighted, which allow the recruiter to initiate a text conversation...</p>
           </div>
@@ -202,7 +247,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/10-1.png">
+            <img class="responsive" src="http://eringallup.info/creativelive/1/16.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>new matches : payment</h4>
@@ -213,7 +258,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/11-1.png">
+            <img class="responsive" src="http://eringallup.info/creativelive/1/17.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>texting a candidate</h4>
@@ -224,7 +269,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/12-1.png">
+            <img class="responsive" src="http://eringallup.info/creativelive/1/18.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>messages</h4>
@@ -235,7 +280,62 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="http://eringallup.info/name/16-1.png">
+            <img class="responsive" src="http://eringallup.info/creativelive/1/19.png">
+          </div>
+          <div class="slide-left col-sm-5 col-sm-pull-7">
+            <h4>landing page</h4>
+            <hr>
+            <p>A coordinating landing page would allow for sign ups while the product was built.</p>
+          </div>
+        </div>
+
+        <div>
+          <div class="slide-right col-sm-7 col-sm-push-5">
+            <img class="responsive" src="http://eringallup.info/creativelive/1/20.png">
+          </div>
+          <div class="slide-left col-sm-5 col-sm-pull-7">
+            <h4>landing page</h4>
+            <hr>
+            <p>A coordinating landing page would allow for sign ups while the product was built.</p>
+          </div>
+        </div>
+
+        <div>
+          <div class="slide-right col-sm-7 col-sm-push-5">
+            <img class="responsive" src="http://eringallup.info/creativelive/1/21.png">
+          </div>
+          <div class="slide-left col-sm-5 col-sm-pull-7">
+            <h4>landing page</h4>
+            <hr>
+            <p>A coordinating landing page would allow for sign ups while the product was built.</p>
+          </div>
+        </div>
+
+        <div>
+          <div class="slide-right col-sm-7 col-sm-push-5">
+            <img class="responsive" src="http://eringallup.info/creativelive/1/22.png">
+          </div>
+          <div class="slide-left col-sm-5 col-sm-pull-7">
+            <h4>landing page</h4>
+            <hr>
+            <p>A coordinating landing page would allow for sign ups while the product was built.</p>
+          </div>
+        </div>
+
+        <div>
+          <div class="slide-right col-sm-7 col-sm-push-5">
+            <img class="responsive" src="http://eringallup.info/creativelive/1/23.png">
+          </div>
+          <div class="slide-left col-sm-5 col-sm-pull-7">
+            <h4>landing page</h4>
+            <hr>
+            <p>A coordinating landing page would allow for sign ups while the product was built.</p>
+          </div>
+        </div>
+
+        <div>
+          <div class="slide-right col-sm-7 col-sm-push-5">
+            <img class="responsive" src="http://eringallup.info/creativelive/1/24.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>landing page</h4>
@@ -265,6 +365,21 @@
   </div>
 </div>
 
+<div class="body-container container">
+  <div class="row">
+    <div class="body-left col-sm-4">
+      <div class="body-title">
+        <h3>Who is</h3>
+        <h4>Creative Live?</h4>
+      </div>
+    </div>
+    <div class="body-right col-sm-7 col-sm-offset-1">
+      <p>Creative Live is a startup that creates long form educational video classes for people in creative fields. Classes touch all aspects of a creative's career- from improving techniques and mastering software to accounting, sales and marketing. Users can watch classes free when they are broadcast or purchase any time access.</p>
+      <p>I worked at Creative Live for over a year, redesigning their website and working on features like the calendar, mobile app and video classroom.</p>
+    </div>
+  </div>
+</div>
+
 <div class="project container">
   <div class="row">
     <div class="col-sm-12">
@@ -281,17 +396,17 @@
     <div class="project-item col-sm-3">
       <div class="project-item-top"><img class="responsive outline" src="http://eringallup.info/creativelive/1/15.png"></div>
       <h5>Calendar</h5>
-      <p>Allows users to find upcoming classes of interest</p>
+      <p>A list-style calendar allowed users to find upcoming classes of interest</p>
     </div>
     <div class="project-item col-sm-3">
-      <div class="project-item-top"><img class="responsive outline" src="http://eringallup.info/creativelive/1/19.png"></div>
+      <div class="project-item-top"><img class="responsive outline" src="http://eringallup.info/creativelive/1/16.png"></div>
       <h5>App</h5>
-      <p>Simplifies watching classes on the go</p>
+      <p>An app simplified watching classes on the go and matched website visuals</p>
     </div>
     <div class="project-item col-sm-3">
       <div class="project-item-top"><img class="responsive outline" src="http://eringallup.info/creativelive/1/24.png"></div>
       <h5>Viewer</h5>
-      <p>Classroom gives users a place to focus and interact</p>
+      <p>An immersive classroom gave users a place to focus and interact</p>
     </div>
   </div>
 </div>
@@ -300,8 +415,8 @@
   <div class="row">
     <div class="body-left col-sm-4">
       <div class="body-title">
-        <h3>What were some</h3>
-        <h4>reactions?</h4>
+        <h3>user</h3>
+        <h4>feedback</h4>
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
