edits to CL slideshow

--- a/html/creativelive.html
+++ b/html/creativelive.html
@@ -34,10 +34,10 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/creativelive/1.png">
+            <img class="responsive" src="../images/creativelive/25.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>website before</h4>
+            <h4>before</h4>
             <hr>
             <p>This was Creative Live's site when I arrived at the company. Users gave feedback that they had a hard time knowing what the company offered and how the service worked.</p>
             <p>They weren't aware that there were classes happening at that moment that they could watch for free, and a catalog of classes they could buy.</p>
@@ -46,10 +46,10 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/creativelive/1.png">
+            <img class="responsive" src="../images/creativelive/26.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>website before</h4>
+            <h4>before</h4>
             <hr>
             <p>The &lsquo;watch now&rsquo; area was a pull down tab at the top of the page. It had a dark feeling to it. The rest of the navigation was cluttered with text.</p>
             <p>In addition,the lime green color used around the site clashed with the course graphics.</p>
@@ -58,10 +58,10 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/creativelive/10.png">
+            <img class="responsive" src="../images/creativelive/27.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>website before</h4>
+            <h4>before</h4>
             <hr>
             <p>The calendar used was drawn in from Google. It was overwhelming to read as many classes happened at the same time and had long titles that were cut off.</p>
           </div>
